--- a/base/values.yaml
+++ b/base/values.yaml
@@ -3,3 +3,7 @@ replicaCount: 1
 resources:
   limits:
     cpu: 300m
+
+nodePorts:
+  http: "12345, 12341, 12342, 12343, 12346, 12347, 12348, 12349"
+  https: "12345, 12341, 12342, 12343, 12346, 12347, 12348, 12349"
