--- a/base/kustomization.yaml
+++ b/base/kustomization.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 helmCharts:
-- name: nginx
+- name: certmanager
   repo: https://charts.bitnami.com/bitnami
   includeCRDs: true
   valuesFile: values.yaml
